adicionando fonte personalizada

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-family: "Roboto", sans-serif;
 }
 
 .game-container {
