--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #000;
+  background-color: #000000;
   min-height: 100vh;
   width: 100%;
   display: flex;
@@ -16,7 +16,7 @@ body {
 }
 
 .game-container {
-  max-width: 480px;
+  min-width: 400px;
 }
 
 .game-header {
@@ -28,11 +28,11 @@ body {
 }
 
 img {
-  width: 5%;
+  width: 10%;
 }
 
 .stats {
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
 }
 
@@ -64,10 +64,19 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  cursor: pointer;
+
+  /* para suavizar a animação de mudança de cor do card ao passar o mouse por cima */
+  transition: background-color 0.3s;
+}
+
+.card:hover {
+  background-color: #a069ee;
 }
 
 .revealed {
-  background-color: #fff;
+  background-color: #ffffff;
   border-color: #dadada;
 }
 
@@ -79,6 +88,28 @@ img {
 }
 
 .revealed .card-emoji {
-  /* para fazer o emoji aparecer, adicionando a classe .revealed */
+  /* para fazer o emoji aparecer, quando adicionar a classe .revealed */
   display: block;
+}
+
+.button {
+  width: 100%;
+  height: 48px;
+  background-color: #8234e9;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 7px;
+  border: 2px solid #5a0caf;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+
+  /* para suavizar a animação de mudança de cor do botão ao passar o mouse por cima */
+  transition: background-color 0.3s;
+
+  margin-top: 32px;
+}
+
+.button:hover {
+  background-color: #7029d6;
 }
